--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ referrerpolicy="no-referrer"
 </head>
 <body>
     
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
         <nav class="header-navigation">
         <a href="./index.html" class="header-logo">
@@ -37,16 +37,16 @@ referrerpolicy="no-referrer"
         </ul>
     </address>
     </div>
-    </header>
+    </header> -->
 
     <main>
-        <section class="opening">
+        <!-- <section class="opening">
             <div class="container">
                         <h1 class="opening-title">Effective Solutions
                         for Your Business</h1>
                         <button type="button" class="opening-btn">Order Service</button>
             </div>
-        </section>
+        </section> -->
 
         <section class="features">
             <div class="container">
@@ -93,7 +93,7 @@ referrerpolicy="no-referrer"
             </div>
         </section>
 
-        <section class="team">
+        <!-- <section class="team">
             <div class="container">
                 <h2 class="team-title">Our team</h2>
                 <ul class="team-list">
@@ -254,9 +254,9 @@ referrerpolicy="no-referrer"
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
-        <section class="portfolio">
+        <!-- <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our portfolio</h2>
                 <ul class="portfolio-list">
@@ -356,9 +356,9 @@ referrerpolicy="no-referrer"
                 </ul>
             </div>
         </section>
-    </main>
+    </main> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-container">
 
             <div class="footer-logo-text">
@@ -431,10 +431,10 @@ referrerpolicy="no-referrer"
                 </div>
 
         </div>
-</footer>
+</footer> -->
 
 
-<div class="backdrop is-open">
+<div class="backdrop">
     <div class="modal">
         <button type="button" class="modal-btn">
             <svg class="modal-btn-icon" width="8" height="8">
