--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ referrerpolicy="no-referrer"
             </div>
         </section> -->
 
-        <!-- <section class="portfolio">
+        <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our portfolio</h2>
                 <ul class="portfolio-list">
@@ -356,7 +356,7 @@ referrerpolicy="no-referrer"
                 </ul>
             </div>
         </section>
-    </main> -->
+    </main>
 
     <!-- <footer class="footer">
         <div class="container footer-container">
