--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ referrerpolicy="no-referrer"
             </div>
         </section>
 
-        <!-- <section class="team">
+        <section class="team">
             <div class="container">
                 <h2 class="team-title">Our team</h2>
                 <ul class="team-list">
@@ -254,7 +254,7 @@ referrerpolicy="no-referrer"
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <section class="portfolio">
             <div class="container">
