HW#6 jpg update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ referrerpolicy="no-referrer"
 </head>
 <body>
     
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header-container">
         <nav class="header-navigation">
         <a href="./index.html" class="header-logo">
@@ -36,8 +36,9 @@ referrerpolicy="no-referrer"
             <li class="header-soc-item"><a class="header-soc-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
+    <button type="button" class="menu-open-btn"></button>
     </div>
-    </header> -->
+    </header>
 
     <main>
         <section class="opening">
@@ -299,26 +300,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                             <div class="portfolio-cover-wrap">
-                                <picture>
-                                    <source 
-                                    srcset="./images/Banking_App.jpg 1x, Banking_App_2x.jpg 2x" 
-                                    media="(min-width: 1440px)"
-                                    />
-                                    <source 
-                                    srcset="./images/Banking_App_tab.jpg 1x, Banking_App_tab_2x.jpg 2x" 
-                                    media="(min-width: 768px)"
-                                    />
-                                    <source 
-                                    srcset="./images/Banking_App_mob.jpg 1x, Banking_App_mob_2x.jpg 2x" 
-                                    media="(max-width: 767px)"
-                                    />
-                                    <img 
-                                    src="./images/Banking_App.jpg" 
+                                <img 
+                                    srcset="
+                                    ./images/Banking-App.jpg 1x, 
+                                    ./images/Banking-App-2x.jpg 2x
+                                    "
+                                    src="./images/Banking-App.jpg" 
                                     alt="purple banking app" 
                                     width="360"
                                     height="300"
-                                    >
-                                </picture>
+                                    />
                                 <p class="portfolio-cover-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -331,26 +322,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                             <div class="portfolio-cover-wrap">
-                                <picture>
-                                    <source 
-                                    srcset="./images/Cashless_Payment.jpg x1, Cashless_Payment_2x.jpg x2" 
-                                    media="(min-width: 1440px)"
-                                    />
-                                    <source 
-                                    srcset="./images/Cashless_Payment_tab.jpg x1, Cashless_Payment_tab_2x.jpg x2" 
-                                    media="(min-width: 768px)"
-                                    />
-                                    <source 
-                                    srcset="./images/Cashless_Payment_mob.jpg x1, Cashless_Payment_mob_2x.jpg x2" 
-                                    media="(max-width: 767px)"
-                                    />
-                                    <img 
-                                    src="./images/Cashless_Payment.jpg" 
+                                    <img
+                                    srcset="
+                                    ./images/Cashless-Payment.jpg 1x, 
+                                    ./images/Cashless-Payment-2x.jpg 2x
+                                    " 
+                                    src="./images/Cashless-Payment.jpg" 
                                     alt="cashless payment with qr code" 
                                     width="360"
                                     height="300"
                                     />
-                                </picture>
                                 <p class="portfolio-cover-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -363,26 +344,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                         <div class="portfolio-cover-wrap">
-                            <picture>
-                                <source 
-                                srcset="./images/Meditaion_App.jpg x1, Meditaion_App_2x.jpg x2" 
-                                media="(min-width: 1440px)"
-                                />
-                                <source 
-                                srcset="./images/Meditaion_App_tab.jpg x1, Meditaion_App_tab_2x.jpg x2" 
-                                media="(min-width: 768px)"
-                                />
-                                <source 
-                                srcset="./images/Meditaion_App_mob.jpg x1, Meditaion_App_mob_2x.jpg x2" 
-                                media="(max-width: 767px)"
-                                />
                                 <img 
-                                src="./images/Meditaion_App.jpg" 
+                                    srcset="
+                                    ./images/Meditaion-App.jpg 1x, 
+                                    ./images/Meditaion-App-2x.jpg 2x
+                                    "
+                                src="./images/Meditaion-App.jpg" 
                                 alt="laptop and iphone front"
                                 width="360"
                                 height="300"
                                 />
-                            </picture>
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -395,26 +366,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                         <div class="portfolio-cover-wrap">
-                            <picture>
-                                <source 
-                                srcset="./images/Taxi_Service.jpg x1, Taxi_Service_2x.jpg x2" 
-                                media="(min-width: 1440px)"
-                                />
-                                <source 
-                                srcset="./images/Taxi_Service_tab.jpg x1, Taxi_Service_tab_2x.jpg x2" 
-                                media="(min-width: 768px)"
-                                />
-                                <source 
-                                srcset="./images/Taxi_Service_mob.jpg x1, Taxi_Service_mob_2x.jpg x2" 
-                                media="(max-width: 767px)"
-                                />
                                 <img 
-                                src="./images/Taxi_Service.jpg" 
+                                srcset="
+                                    ./images/Taxi-Service.jpg 1x, 
+                                    ./images/Taxi-Service-2x.jpg 2x
+                                    "
+                                src="./images/Taxi-Service.jpg" 
                                 alt="Taxi hands on the wheel"
                                 width="360"
                                 height="300"
                                 />
-                            </picture>
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -427,26 +388,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                        <div class="portfolio-cover-wrap">
-                        <picture>
-                            <source 
-                            srcset="./images/Screen_Illustrations.jpg x1, Screen_Illustrations_2x.jpg x2" 
-                            media="(min-width: 1440px)"
-                            />
-                            <source 
-                            srcset="./images/Screen_Illustrations_tab.jpg x1, Screen_Illustrations_tab_2x.jpg x2" 
-                            media="(min-width: 768px)"
-                            />
-                            <source 
-                            srcset="./images/Screen_Illustrations_mob.jpg x1, Screen_Illustrations_mob_2x.jpg x2" 
-                            media="(max-width: 767px)"
-                            />
                             <img 
-                            src="./images/Screen_Illustrations.jpg" 
+                            srcset="
+                                    ./images/Screen-Illustrations.jpg 1x, 
+                                    ./images/Screen-Illustrations-2x.jpg 2x
+                                    "
+                            src="./images/Screen-Illustrations.jpg" 
                             alt="4 screen illustrations with moon"
                             width="360"
                             height="300"
                             />
-                        </picture>
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
@@ -459,26 +410,16 @@ referrerpolicy="no-referrer"
 
                     <li class="portfolio-item">
                         <div class="portfolio-cover-wrap">
-                            <picture>
-                                <source 
-                                srcset="./images/Online_Courses.jpg x1, Online_Courses_2x.jpg x2" 
-                                media="(min-width: 1440px)"
-                                />
-                                <source 
-                                srcset="./images/Online_Courses_tab.jpg x1, Online_Courses_tab_2x.jpg x2" 
-                                media="(min-width: 768px)"
-                                />
-                                <source 
-                                srcset="./images/Online_Courses_mob.jpg x1, Online_Courses_mob_2x.jpg x2" 
-                                media="(max-width: 767px)"
-                                />
                                 <img 
-                                src="./images/Online_Courses.jpg" 
+                                srcset="
+                                    ./images/Online-Courses.jpg 1x, 
+                                    ./images/Online-Courses-2x.jpg 2x
+                                    "
+                                src="./images/Online-Courses.jpg" 
                                 alt="the girl in the orange glasses and sweater"
                                 width="360"
                                 height="300"
                                 />
-                            </picture>
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
