--- a/index.html
+++ b/index.html
@@ -36,7 +36,30 @@ referrerpolicy="no-referrer"
             <li class="header-soc-item"><a class="header-soc-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
-    <button type="button" class="menu-open-btn"></button>
+    <button type="button" class="menu-open-btn">
+        <svg class="menu-open-btn-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+        </svg>
+    </button>
+    </div>
+
+    <div class="mob-menu">
+        <button type="button" class="mob-close-btn-menu">
+            <svg class="mob-close-btn-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black-18dp"></use>
+            </svg>
+        </button>
+        <ul class="mob-menu-list">
+            <li class="mob-menu-item"><a href="./index.html" class="mob-menu-link">Studio</a></li>
+            <li class="mob-menu-item"><a href="" class="mob-menu-link">Portfolio</a></li>
+            <li class="mob-menu-item"><a href="" class="mob-menu-link">Contacts</a></li>
+        </ul>
+        <address class="mob-soc">
+            <ul class="mob-soc-list">
+                <li class="mob-soc-item"><a class="mob-soc-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="mob-soc-item"><a class="mob-soc-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </div>
     </header>
 
