--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ referrerpolicy="no-referrer"
                 <use href="./images/icons.svg#icon-close-black-18dp"></use>
             </svg>
         </button>
+        <div class="mob-info">
         <ul class="mob-menu-list">
             <li class="mob-menu-item"><a href="./index.html" class="mob-menu-link">Studio</a></li>
             <li class="mob-menu-item"><a href="" class="mob-menu-link">Portfolio</a></li>
@@ -56,10 +57,11 @@ referrerpolicy="no-referrer"
         </ul>
         <address class="mob-soc">
             <ul class="mob-soc-list">
-                <li class="mob-soc-item"><a class="mob-soc-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="mob-soc-item"><a class="mob-soc-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="mob-soc-item"><a class="mob-soc-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
         </address>
+        </div>
         <ul class="mob-social-list">
             <li class="features-social-item">
                 <a href="./index.html" class="mob-social-link">
