--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ referrerpolicy="no-referrer"
         </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-container">
 
             <div class="footer-logo-text">
@@ -565,7 +565,7 @@ referrerpolicy="no-referrer"
                 </div>
 
         </div>
-</footer> -->
+</footer>
 
 
 <div class="backdrop">
